--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 
   <footer class="page-footer font-small blue">
 
+    <span class="text-muted text-center py-3">YOU ARE AWESOME!</span>
+
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
     <p>Tony Crosby </p>
