--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
     </section>
   </main>
 
-  <footer class="page-footer font-small blue">
+  <section class= "container text-center">
 
-    <span class="text-muted text-center py-3">YOU ARE AWESOME!</span>
+    <footer class="page-footer font-small blue">
+
+  <span class="text-muted py-3 bg-light">YOU ARE AWESOME!</span>
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
