--- a/crosbytony.html
+++ b/crosbytony.html
@@ -57,9 +57,17 @@
             </p>
 
             <p class="lead">
-            <a class="btn btn-primary btn-sm" href="contact.html" role="button">Contact Me here!</a>
             </p>
+    <hr ::before bg-dark>  
+
+    <img class="rounded-circle float-right" img src="./Pictures/Tony Chiefs.jpg" alt="Chiefs" width="200px" height="200px"/>
+        
+            <h1 class="display-3">I love the chiefs!</h1>
+            <p class="lead">I've been to many chiefs games and watch almost every game that I can at home or at the stadium!
+            </p>    
     </section>
+
+    <a class="btn btn-primary btn-sm" href="contact.html" role="button">Contact Me here!</a>
 </main>
 
 <footer class="page-footer font-small blue">
