--- a/crosbytony.html
+++ b/crosbytony.html
@@ -13,10 +13,9 @@
 <body>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <!-- Brand -->
+
   <a class="navbar-brand" href="index.html">Home</a>
 
-  <!-- Links -->
   <ul class="navbar-nav">
     
     <li class="nav-item">
@@ -40,11 +39,11 @@
 
     <img class="rounded-circle float-right" img src="./Pictures/27067841_1627146370711870_2899505521628237938_n.jpg" alt="Tony Crosby" width="200px" height="200px"/>
 
-    <h3 class="display-2 pb-2">About Me</h3>
+    <h3 class="display-2 text-secondary pb-2">About Me</h3>
 
-            <p class="font-serif lead mb-4 text-secondary">My names Tony Crosby,</p>
-            <p class="font-serif lead mb-4 text-secondary">I'm a student at KU studying Web Developing and Coding, I love building computers and doing anything that has to deal with a computer.</p>
-            <p class="font-serif lead mb-4 text-secondary">I joined the program because I wanted to figure out how to work a computer from the brains since I know how to put one together on the outside.</p>
+            <p class="font-serif text-dark lead mb-4 text-secondary">My names Tony Crosby,</p>
+            <p class="font-serif text-dark lead mb-4 text-secondary">I'm a student at KU studying Web Developing and Coding, I love building computers and doing anything that has to deal with a computer.</p>
+            <p class="font-serif text-dark lead mb-4 text-secondary">I joined the program because I wanted to figure out how to work a computer from the brains since I know how to put one together on the outside.</p>
 
     <hr ::before bg-dark>
 
@@ -64,10 +63,10 @@
         
             <h1 class="display-3">I love the chiefs!</h1>
             <p class="lead">I've been to many chiefs games and watch almost every game that I can at home or at the stadium!
-            </p>    
+            </p>
+            <a class="btn btn-primary btn-sm" href="contact.html" role="button">Contact Me here!</a>   
     </section>
 
-    <a class="btn btn-primary btn-sm" href="contact.html" role="button">Contact Me here!</a>
 </main>
 
 <footer class="page-footer font-small blue">
