--- a/portfolio.html
+++ b/portfolio.html
@@ -12,10 +12,9 @@
 <body>
     
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <!-- Brand -->
+
   <a class="navbar-brand" href="index.html">Home</a>
 
-  <!-- Links -->
   <ul class="navbar-nav">
     
     <li class="nav-item">
@@ -34,11 +33,15 @@
 <br>
   
 <div class="container">
-<hr ::before>
-    <h3 class="display-2 pb-2">My Portfolio</h3>
-<hr ::after>
+<hr ::before>    
 
-        <p>This is all the stuff I have created</p>
+    <div class="row">
+
+      <div class="col-md-6">
+
+      <img src="http://placehold.it/300x300" alt="Placeholder" class="img-thumbnail">
+
+    </div>
 </div>
 
 <footer class="page-footer font-small blue">
