--- a/contact.html
+++ b/contact.html
@@ -13,10 +13,9 @@
 
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <!-- Brand -->
+
   <a class="navbar-brand" href="index.html">Home</a>
 
-  <!-- Links -->
   <ul class="navbar-nav">
     
     <li class="nav-item">
@@ -39,10 +38,28 @@
 <div class="container">
 
     <h3 class="display-2 pb-2">Contact me</h3>
+    
+    <form action="\mail.php">
 
-<hr ::before>    
+      <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="name" class="form-control" placeholder="Enter name" id="name">
+      </div>
+  
+      <div class="form-group">
+        <label for="email">Email address:</label>
+        <input type="email" class="form-control" placeholder="Enter email" id="email">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
-    <p>My email is <a rel="email" href="mailto:tonycrosby96@gmail.com">Tonycrosby96@gmail.com</a></p>
+
+<hr ::before>
+
+
+
+</div>
+
 
 </div>
 
