--- a/crosbytony.html
+++ b/crosbytony.html
@@ -10,26 +10,41 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
+<style>
+  a:hover {
+    background-color: orange;
+  }
+</style>
+
 <body>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <a class="navbar-brand" href="index.html">Tony Crosby</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarsExample03">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="crosbytony.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">Contact</a>
+        </li>
 
-  <a class="navbar-brand" href="index.html">Home</a>
-
-  <ul class="navbar-nav">
-    
-    <li class="nav-item">
-         <a class="nav-link" href="crosbytony.html">About</a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link" href="portfolio.html">Portfolio</a>
-    </li>
-
-    <li class="nav-item">
-      <a class="nav-link" href="contact.html">Contact</a>
-    </li>
-</nav>
+      </ul>
+      <form class="form-inline my-2 my-md-0">
+        <input class="form-control" type="text" placeholder="Search">
+      </form>
+    </div>
+  </nav>
 
 <br>
   
@@ -69,15 +84,20 @@
 
 </main>
 
-<footer class="page-footer font-small blue">
+<section class= "container-fluid">
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <p>Tony Crosby </p>
+  <div class="row-3 mt-4">
+    <div class="col-3"></div>
+      <footer class="page-footer font-small blue">
+
+      <div class="alert alert-primary" role="alert">
+      <strong>Well done!</strong> You successfully read this
+      important alert message. © 2020 Copyright:
+      Tony Crosby
+      </footer>
     </div>
-    <!-- Copyright -->
-  
-</footer>
+  </div>
+</section>
 
 </body>
 </html>
