--- a/crosbytony.html
+++ b/crosbytony.html
@@ -54,48 +54,65 @@
 
     <img class="rounded-circle float-right" img src="./Pictures/27067841_1627146370711870_2899505521628237938_n.jpg" alt="Tony Crosby" width="200px" height="200px"/>
 
-    <h3 class="display-2 text-secondary pb-2">About Me</h3>
+      <div class="row">
 
-            <p class="font-serif text-dark lead mb-4 text-secondary">My names Tony Crosby,</p>
-            <p class="font-serif text-dark lead mb-4 text-secondary">I'm a student at KU studying Web Developing and Coding, I love building computers and doing anything that has to deal with a computer.</p>
-            <p class="font-serif text-dark lead mb-4 text-secondary">I joined the program because I wanted to figure out how to work a computer from the brains since I know how to put one together on the outside.</p>
+        <div class="col sm-6">
 
+          <h3 class="text-secondary sm-6 pb-2">About Me</h3>
+            <p class="font-serif text-dark lead sm-12 text-secondary">My names Tony Crosby,
+            </p>
+
+            <p class="font-serif text-dark lead sm-4 text-secondary">I'm a student at KU studying Web Developing and Coding, I love building computers and doing anything that has to deal with a computer.
+            </p>
+
+            <p class="font-serif text-dark lead sm-4 text-secondary">I joined the program because I wanted to figure out how to work a computer from the brains since I know how to put one together on the outside.
+            </p>
+          </div>
+        </div>
     <hr ::before bg-dark>
 
     <section class="jumbotron">
 
-        <h1 class="display-3">My Hobbies!</h1>
+      <div class="row">
+
+        <div class="col sm-6">
+
+          <h1 class="display-3">My Hobbies!</h1>
             <p class="lead">I love playing video games and researching how to do stuff, 
                 and watching youtube tutorials, I also like listening to music. 
                 My favorite band is Staind, and my favorite rapper is Juice WRLD.
             </p>
+    <hr ::before bg-dark>
+    
+      <div class="row"> 
 
-            <p class="lead">
-            </p>
-    <hr ::before bg-dark>  
+        <div class="col sm-6">
 
-    <img class="rounded-circle float-right" img src="./Pictures/Tony Chiefs.jpg" alt="Chiefs" width="200px" height="200px"/>
+          <img class="rounded-circle float-right" img src="./Pictures/Tony Chiefs.jpg" alt="Chiefs" width="200px" height="200px"/>
         
             <h1 class="display-3">I love the chiefs!</h1>
-            <p class="lead">I've been to many chiefs games and watch almost every game that I can at home or at the stadium!
-            </p>
-            <a class="btn btn-primary btn-sm" href="contact.html" role="button">Contact Me here!</a>   
+              <p class="lead">I've been to many chiefs games and watch almost every game that I can at home or at the stadium!
+              </p>
+              <a class="btn btn-primary btn-sm" href="contact.html" role="button">Contact Me here!</a>   
     </section>
 
 </main>
 
 <section class= "container-fluid">
 
-  <div class="row-3 mt-4">
-    <div class="col-3"></div>
-      <footer class="page-footer font-small blue">
+  <div class="mt-4">
+    <footer class="page-footer font-small blue">
 
       <div class="alert alert-primary" role="alert">
-      <strong>Well done!</strong> You successfully read this
-      important alert message. © 2020 Copyright:
+
+      <strong class="text-dark"> © 2020 Copyright :
       Tony Crosby
-      </footer>
-    </div>
+      </strong>
+
+      <a class="text-muted" href="tonycrosby.net" rel="tony"> Website</a>
+
+      </div>
+    </footer>
   </div>
 </section>
 
