--- a/portfolio.html
+++ b/portfolio.html
@@ -38,40 +38,63 @@
         </li>
 
       </ul>
-      <form class="form-inline my-2 my-md-0">
-        <input class="form-control" type="text" placeholder="Search">
-      </form>
     </div>
   </nav>
 
 <br>
   
 <div class="container">
-<hr ::before>    
 
-    <div class="row">
 
-      <div class="col-md-6 mt-4">
-        <img src="http://placehold.it/300x300" alt="Placeholder" class="img-thumbnail">
+  <section> 
+    <h1 class="text-dark">My Portfolio</h1>
+  </section>
 
-      <div class="col-md-6 mt-4">
-        <img src="http://placehold.it/300x300" alt="Placeholder" class="img-thumbnail">
-    
+<hr ::before>
+
+  <div class="row">
+
+    <div class="col-6 mt-5">
+      <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+    </div> 
+
+
+    <div class="col-6 mt-5">
+      <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
     </div>
+
+    <div class="col-6 mt-5">
+      <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+    </div> 
+    
+    <div class="col-6 mt-5">
+      <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+    </div>
+
+    <div class="col-6 mt-5">
+      <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+    </div> 
+  
+
+  </div>
+
 </div>
 
 <section class= "container-fluid">
 
-  <div class="row-3 mt-4">
-    <div class="col-3"></div>
-      <footer class="page-footer font-small blue">
+  <div class="mt-4">
+    <footer class="page-footer font-small blue">
 
       <div class="alert alert-primary" role="alert">
-      <strong>Well done!</strong> You successfully read this
-      important alert message. © 2020 Copyright:
+
+      <strong class="text-dark"> © 2020 Copyright :
       Tony Crosby
-      </footer>
-    </div>
+      </strong>
+
+      <a class="text-muted" href="tonycrosby.net" rel="tony"> Website</a>
+
+      </div>
+    </footer>
   </div>
 </section>
 
