--- a/contact.html
+++ b/contact.html
@@ -78,16 +78,19 @@
 
 <section class= "container-fluid">
 
-  <div class="row-3 mt-4">
-    <div class="col-3"></div>
-      <footer class="page-footer font-small blue">
+  <div class="mt-4">
+    <footer class="page-footer font-small blue">
 
       <div class="alert alert-primary" role="alert">
-      <strong>Well done!</strong> You successfully read this
-      important alert message. © 2020 Copyright:
+
+      <strong class="text-dark"> © 2020 Copyright :
       Tony Crosby
-      </footer>
-    </div>
+      </strong>
+
+      <a class="text-muted" href="tonycrosby.net" rel="tony"> Website</a>
+
+      </div>
+    </footer>
   </div>
 </section>
 
