--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">Tony Crosby</a>
+    <a class="navbar-brand" href="#">Tony Crosby</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
