--- a/portfolio.html
+++ b/portfolio.html
@@ -55,12 +55,12 @@
   <div class="row">
 
     <div class="col-6 mt-5">
-      <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+      <img src="./Pictures/Tony Chiefs.jpg" width="350" height="350" alt="Placeholder" class="img-thumbnail">
     </div> 
 
 
     <div class="col-6 mt-5">
-      <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+      <img src="./Pictures/27067841_1627146370711870_2899505521628237938_n.jpg" width="350" height="350" alt="Placeholder" class="img-thumbnail">
     </div>
 
     <div class="col-6 mt-5">
