--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="./style.css">
 </head>
-
-<style>
-  a:hover {
-    background-color: orange;
-  }
-</style>
 
 <body>
 
@@ -29,9 +24,6 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="crosbytony.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
@@ -49,9 +41,7 @@
 
 <br>
 
-<hr ::before>
-
-<div class="container">
+<div class="container-md">
 
     <h3 class="display-2 pb-2">Contact me</h3>
     
