--- a/portfolio.html
+++ b/portfolio.html
@@ -8,11 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <style>
-    a:hover {
-      background-color: orange;
-    }
-  </style>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
@@ -28,9 +24,6 @@
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="crosbytony.html">About</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
         <li class="nav-item">
@@ -38,6 +31,10 @@
         </li>
 
       </ul>
+
+      <form class="form-inline my-2 my-md-0">
+        <input class="form-control" type="text" placeholder="Search">
+      </form>
     </div>
   </nav>
 
@@ -64,7 +61,7 @@
     </div>
 
     <div class="col-6 mt-5">
-      <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+      <img class="auto" src="./Pictures/Capture.JPG" width="350" height="350" alt="Placeholder" class="img-">
     </div> 
     
     <div class="col-6 mt-5">
@@ -80,8 +77,8 @@
 
 </div>
 
-<section class= "container-fluid">
-
+<footer class= "container-fluid">
+  
   <div class="mt-4">
     <footer class="page-footer font-small blue">
 
@@ -96,7 +93,7 @@
       </div>
     </footer>
   </div>
-</section>
+</footer>
 
 </body>
 </html>
