--- a/contact.html
+++ b/contact.html
@@ -33,38 +33,37 @@
         </li>
 
       </ul>
-      <form class="form-inline my-2 my-md-0">
-        <input class="form-control" type="text" placeholder="Search">
-      </form>
     </div>
   </nav>
 
 <br>
 
-<div class="container-md">
+<section class="container-md">
+  <div class="col-md-12">
+    <div class="card mt-5">
+      <div class="card-body bg-light">
 
-    <h3 class="display-2 pb-2">Contact me</h3>
+      <h3 class="display-2 pb-2">Contact</h3>
+
+      <hr ::before>
     
-    <form action="\mail.php">
+        <form action="\mail.php">
 
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="name" class="form-control" placeholder="Enter name" id="name">
-      </div>
+        <div class="form-group">
+          <label for="name">Name:</label>
+          <input type="name" class="form-control" placeholder="Enter name" id="name">
+        </div>
   
-      <div class="form-group">
-        <label for="email">Email address:</label>
-        <input type="email" class="form-control" placeholder="Enter email" id="email">
+        <div class="form-group">
+          <label for="email">Email address:</label>
+          <input type="email" class="form-control" placeholder="Enter email" id="email">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-
-
-<hr ::before>
-
-
-
-</div>
+    </div>
+  </div>
+</section>
 
 <section class= "container-fluid">
 
@@ -73,11 +72,9 @@
 
       <div class="alert alert-primary" role="alert">
 
-      <strong class="text-dark"> © 2020 Copyright :
-      Tony Crosby
-      </strong>
-
-      <a class="text-muted" href="tonycrosby.net" rel="tony"> Website</a>
+        <p class="text-dark text-center"> Copyright © 2020
+          Tony Crosby
+        </p>
 
       </div>
     </footer>
