--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
         </li>
 
       </ul>
-      <form class="form-inline my-2 my-md-0">
-        <input class="form-control" type="text" placeholder="Search">
-      </form>
     </div>
   </nav>
 
@@ -42,71 +39,58 @@
   
 <main class="container-md">
 
-    <hr ::before bg-dark>
+      <div class="row-sm-6">
 
-      <div class="row">
+        <div class="col-md-12">
+          <div class="card mt-5"></div>
+            <div class="card-body bg-light">
 
-        <div class="col-12 sm-6">
-
-          <h3 class="text-secondary sm-6 pb-2">About Me</h3>
-            <p class="font-serif text-dark lead sm-12 text-secondary">My names Tony Crosby,
-            </p>
-
-            <p class="font-serif text-dark lead sm-4 text-secondary">I'm a student at KU studying Web Developing and Coding, I love building computers and doing anything that has to deal with a computer.
-            </p>
-
-            <p class="font-serif text-dark lead sm-4 text-secondary">I joined the program because I wanted to figure out how to work a computer from the brains since I know how to put one together on the outside.
-            </p>
+              <h3 class="text-secondary sm-6 pb-2">About Me</h3>
+              <hr ::before bg-dark>
+              <img class="float-left img-fluid mr-2" src="./Pictures/27067841_1627146370711870_2899505521628237938_n.jpg" width="100px" height="100px">
+              <p class="text-wrap">
+                My names Tony Crosby, I joined the coding program because I wanted to learn how to work on a computer from the brains software side since I already know how to put one together from the parts, power supply, and etc.
+                My Hobbies
+                range from playing video games to researching how to do stuff, 
+                to watching youtube tutorials, I love listening to music and dissecting how they made the beats. 
+                My favorite band is Staind, and my favorite rapper is Juice WRLD.
+              </p>
+          </div> 
         </div>
       </div>
     <hr ::before bg-dark>
 
     <section class="jumbotron">
-
-      <div class="row">
-
-        <div class="col sm-6">
-
-          <h1 class="display-3">My Hobbies!</h1>
-            <p class="lead">I love playing video games and researching how to do stuff, 
-                and watching youtube tutorials, I also like listening to music. 
-                My favorite band is Staind, and my favorite rapper is Juice WRLD.
-            </p>
-        </div>
-      </div>
-    <hr ::before bg-dark>
     
       <div class="row"> 
 
         <div class="col sm-6">
 
-          <img class="rounded-circle float-right" img src="./Pictures/Tony Chiefs.jpg" alt="Chiefs" width="100px" height="100px"/>
+          <img class="img-fluid float-right" img src="./Pictures/7a142e0edbae14436b83d63447a33d41.png" alt="Chiefs" width="200px" height="200px"/>
         
-            <h1 class="display-3">I love the chiefs!</h1>
-              <p class="lead">I've been to many chiefs games and watch almost every game that I can at home or at the stadium!
+            <h1 class="text-warning">GO <strong class="text-danger">CHIEFS!</strong></h1>
+              <p class="lead"> I've been to many chiefs games and watch almost every game that I can! At home or try to be at the stadium!
               </p>
               <a class="btn btn-primary btn-sm" href="contact.html" role="button">Contact Me here!</a>   
     </section>
 
 </main>
 
-<section class= "container-fluid">
+<footer class= "container-fluid">
 
   <div class="mt-4">
     <footer class="page-footer font-small blue">
 
       <div class="alert alert-primary" role="alert">
 
-      <strong class="text-dark"> © 2020 Copyright :
+      <p class="text-dark text-center"> Copyright © 2020
       Tony Crosby
-      </strong>
-
-      <a class="text-muted" href="tonycrosby.net" rel="tony"> Website</a>
+      </p>
 
       </div>
     </footer>
   </div>
-</section>
+</footer>
 
 </body>
 </html>
