--- a/portfolio.html
+++ b/portfolio.html
@@ -32,9 +32,6 @@
 
       </ul>
 
-      <form class="form-inline my-2 my-md-0">
-        <input class="form-control" type="text" placeholder="Search">
-      </form>
     </div>
   </nav>
 
@@ -49,31 +46,31 @@
 
 <hr ::before>
 
-  <div class="row">
+  <section class="row">
 
-    <div class="col-6 mt-5">
-      <img src="./Pictures/Tony Chiefs.jpg" width="350" height="350" alt="Placeholder" class="img-thumbnail">
+    <div class="col-sm-3 col-md-3 col-lg-6 mt-2">
+      <img src="./Pictures/Tony Chiefs.jpg" width="350px" height="350px" alt="Placeholder" class="img-thumbnail">
     </div> 
 
 
-    <div class="col-6 mt-5">
-      <img src="./Pictures/27067841_1627146370711870_2899505521628237938_n.jpg" width="350" height="350" alt="Placeholder" class="img-thumbnail">
+    <div class="col-sm-3 col-md-3 col-lg-6 mt-2">
+      <img src="./Pictures/27067841_1627146370711870_2899505521628237938_n.jpg" width="350px" height="350px" alt="Placeholder" class="img-thumbnail">
     </div>
 
-    <div class="col-6 mt-5">
-      <img class="auto" src="./Pictures/Capture.JPG" width="350" height="350" alt="Placeholder" class="img-">
+    <div class="col-sm-3 col-md-3 col-lg-6 mt-2">
+      <img src="./Pictures/download.png" width="350" height="350" alt="Placeholder" class="img-thumbnail">
     </div> 
     
-    <div class="col-6 mt-5">
-      <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+    <div class="col-sm-3 col-md-3 col-lg-6 mt-2">
+      <img src="./Pictures/download (1).png" width="350" height="350" alt="Placeholder" class="img-thumbnail">
     </div>
 
-    <div class="col-6 mt-5">
-      <img src="http://placehold.it/350x350" alt="Placeholder" class="img-thumbnail">
+    <div class="col-sm-3 col-md-3 col-lg-6 mt-2">
+      <img src="./Pictures/download (2).png" width="350" height="350" alt="Placeholder" class="img-thumbnail">
     </div> 
   
 
-  </div>
+  </section>
 
 </div>
 
@@ -84,11 +81,9 @@
 
       <div class="alert alert-primary" role="alert">
 
-      <strong class="text-dark"> © 2020 Copyright :
-      Tony Crosby
-      </strong>
-
-      <a class="text-muted" href="tonycrosby.net" rel="tony"> Website</a>
+        <p class="text-dark text-center"> Copyright © 2020
+          Tony Crosby
+        </p>
 
       </div>
     </footer>
