--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <br>
   
-<main class="container-md">
+<main class="container">
 
       <div class="row-sm-6">
 
@@ -47,7 +47,7 @@
 
               <h3 class="text-secondary sm-6 pb-2">About Me</h3>
               <hr ::before bg-dark>
-              <img class="float-left img-fluid mr-2" src="./Pictures/27067841_1627146370711870_2899505521628237938_n.jpg" width="100px" height="100px">
+              <img class="float-left img-fluid mr-4 justify-content" src="./Pictures/27067841_1627146370711870_2899505521628237938_n.jpg" width="150px" height="150px">
               <p class="text-wrap">
                 My names Tony Crosby, I joined the coding program because I wanted to learn how to work on a computer from the brains software side since I already know how to put one together from the parts, power supply, and etc.
                 My Hobbies
