--- a/portfolio.html
+++ b/portfolio.html
@@ -67,10 +67,42 @@
 
     <div class="col-sm-3 col-md-3 col-lg-6 mt-2">
       <img src="./Pictures/download (2).png" width="350" height="350" alt="Placeholder" class="img-thumbnail">
-    </div> 
-  
+    </div>
+    
+    <hr ::before>
 
   </section>
+
+    <hr ::before>
+</div>
+
+<div class="container">
+
+
+  <h2 class="text-dark">Links</h2>
+  <hr ::before>
+
+    <li>
+      <a href="https://github.com/tonycrosby-tech" rel="Link">Github</a>
+    </li>
+
+    <li>
+      <a href="https://www.linkedin.com/in/tony-crosby-17544a18a/" rel="Link">Linkedin</a>
+    </li>
+
+    <h3 class="text-dark">Completed assignments</h3>
+    <hr ::before>
+      <li>
+        <a href="http://tonycrosby.net/" rel="Link">Website</a>
+      </li>
+  
+      <li>
+        <a href="https://tonycrosby-tech.github.io/prework-about-me/" rel="Link">Pre-Work for school</a>
+      </li>
+  
+      <li>
+        <a href="https://tonycrosby-tech.github.io/01_refactor_hw/" rel="Link">Code-Refactor</a>
+      </li>
 
 </div>
 
