--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
 
 <br>
   
-<div class="container">
+<main class="container">
 
 
   <section> 
@@ -74,9 +74,9 @@
   </section>
 
     <hr ::before>
-</div>
+</main>
 
-<div class="container">
+<section class="container">
 
 
   <h2 class="text-dark">Links</h2>
@@ -104,7 +104,7 @@
         <a href="https://tonycrosby-tech.github.io/01_refactor_hw/" rel="Link">Code-Refactor</a>
       </li>
 
-</div>
+</section>
 
 <footer class= "container-fluid">
   
