--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
 <section class="container">
 
 
-  <h2 class="text-dark">Links</h2>
+  <h2 class="text-dark text-center">Links</h2>
   <hr ::before>
 
     <li>
@@ -90,7 +90,7 @@
       <a href="https://www.linkedin.com/in/tony-crosby-17544a18a/" rel="Link">Linkedin</a>
     </li>
 
-    <h3 class="text-dark">Completed assignments</h3>
+    <h3 class="text-dark text-center">Completed assignments</h3>
     <hr ::before>
       <li>
         <a href="http://tonycrosby.net/" rel="Link">Website</a>
