--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     <div class="card mt-5">
       <div class="card-body bg-light">
 
-      <h3 class="display-2 pb-2">Contact</h3>
+      <h3 class="text-dark text-center">Contact</h3>
 
       <hr ::before>
     
