--- a/portfolio.html
+++ b/portfolio.html
@@ -41,10 +41,10 @@
 
 
   <section> 
-    <h1 class="text-dark">My Portfolio</h1>
+    <h1 class="text-light">My Portfolio</h1>
   </section>
 
-<hr ::before>
+  <hr ::before>
 
   <section class="row">
 
@@ -78,31 +78,31 @@
 <section class="container">
 
 
-  <h2 class="text-dark text-center">Links</h2>
+  <h2 class="text-light text-center">Links</h2>
   <hr ::before>
 
     <li>
-      <a href="https://github.com/tonycrosby-tech" rel="Link">Github</a>
+      <a class="text-light" href="https://github.com/tonycrosby-tech" rel="Link">Github</a>
     </li>
 
     <li>
-      <a href="https://www.linkedin.com/in/tony-crosby-tech/" rel="Link">Linkedin</a>
+      <a class="text-light" href="https://www.linkedin.com/in/tony-crosby-tech/" rel="Link">Linkedin</a>
     </li>
-
-    <h3 class="text-dark text-center">Completed assignments</h3>
-    <hr ::before>
+  <hr ::before>
+    <h3 class="text-light text-center">Completed assignments</h3>
+  <hr ::before>
       <li>
-        <a href="http://tonycrosby.net/" rel="Link">Website</a>
+        <a class="text-light" href="http://tonycrosby.net/" rel="Link">Website</a>
       </li>
   
       <li>
-        <a href="https://tonycrosby-tech.github.io/prework-about-me/" rel="Link">Pre-Work for school</a>
+        <a class="text-light" href="https://tonycrosby-tech.github.io/prework-about-me/" rel="Link">Pre-Work for school</a>
       </li>
   
       <li>
-        <a href="https://tonycrosby-tech.github.io/01_refactor_hw/" rel="Link">Code-Refactor</a>
+        <a class="text-light" href="https://tonycrosby-tech.github.io/01_refactor_hw/" rel="Link">Code-Refactor</a>
       </li>
-
+  <hr ::before>
 </section>
 
 <footer class= "container-fluid">
