--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
 <br>
 
-<section class="container-md">
+<main class="container-md">
   <div class="col-md-12">
     <div class="card mt-5">
       <div class="card-body bg-light">
@@ -63,9 +63,9 @@
       </div>
     </div>
   </div>
-</section>
+</main>
 
-<section class= "container-fluid">
+<footer class= "container-fluid">
 
   <div class="mt-4">
     <footer class="page-footer font-small blue">
@@ -79,7 +79,7 @@
       </div>
     </footer>
   </div>
-</section>
+</footer>
 
 </body>
 </html>
