--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
               <hr ::before bg-dark>
               <img class="float-left img-fluid mr-4 justify-content" src="./Pictures/27067841_1627146370711870_2899505521628237938_n.jpg" width="150px" height="150px">
               <p class="text-wrap">
-                My names Tony Crosby, I joined the coding program because I wanted to learn how to work on a computer from the brains software side since I already know how to put one together from the parts, power supply, and etc.
+                My name is Tony Crosby, And I joined the coding program because I wanted to learn how to work on a computer from the software side since I already know how to put one together from the parts, power supply, etc.
                 My Hobbies
                 range from playing video games to researching how to do stuff, 
                 to watching youtube tutorials, I love listening to music and dissecting how they made the beats. 
-                My favorite band is Staind, and my favorite rapper is Juice WRLD.
+                My favorite band is Staind, and my favorite rapper was Juice WRLD.
               </p>
       
               <hr ::before bg-dark>
