redirecting files to assets instead of Pictures

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,23 +58,23 @@
               <section class="row">
 
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./Pictures/Tony Chiefs.jpg" width="350px" height="350px" alt="Chiefs" class="img-thumbnail">
+                  <img src="./assets/Tony Chiefs.jpg" width="350px" height="350px" alt="Chiefs" class="img-thumbnail">
                 </div> 
 
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./Pictures/27067841_1627146370711870_2899505521628237938_n.jpg" width="350px" height="350px" alt="Profile Pic" class="img-thumbnail">
+                  <img src="./assets/27067841_1627146370711870_2899505521628237938_n.jpg" width="350px" height="350px" alt="Profile Pic" class="img-thumbnail">
                 </div>
 
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./Pictures/download.png" width="350" height="350" alt="Brothers" class="img-thumbnail">
+                  <img src="./assets/download.png" width="350" height="350" alt="Brothers" class="img-thumbnail">
                 </div> 
     
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./Pictures/download (1).png" width="350" height="350" alt="HS Graduation" class="img-thumbnail">
+                  <img src="./assets/download (1).png" width="350" height="350" alt="HS Graduation" class="img-thumbnail">
                 </div>
 
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./Pictures/download (2).png" width="350" height="350" alt="Family" class="img-thumbnail">
+                  <img src="./assets/download (2).png" width="350" height="350" alt="Family" class="img-thumbnail">
                 </div>
     
                 <hr ::before>
