pushing up updated hw

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
                 <hr ::before>
                 
                 <li>
-                  <a class="text-dark" href="http://tonycrosby.net/" rel="Link">Website</a>
+                  <a class="text-dark" href="https://tonycrosby.net/02_CSS_Bootstrap/" rel="Link">Website</a>
                 </li>
   
                 <li>
@@ -111,6 +111,14 @@
   
                 <li>
                   <a class="text-dark" href="https://tonycrosby-tech.github.io/01_refactor_hw/" rel="Link">Code-Refactor</a>
+                </li>
+
+                <li>
+                  <a class="text-dark" href="https://tonycrosby-tech.github.io/03_password_generator/" rel="Link">Password Generator</a>
+                </li>
+
+                <li>
+                  <a class="text-dark" href="https://tonycrosby.net/04_web_api/" rel="Link">Javascript Code Quiz</a>
                 </li>
                 <hr ::before>
               
