pushing up completed hw's

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,8 @@
 <main class="container">
   <div class="row-sm-6">
 
-    <div class="col-md-12">
-      <div class="card mt-5">
+    <div class="col-md-16">
+      <div class="card mt-3">
         <div class="card-body bg-light">
 
             <h1 class="text-dark">My Portfolio</h1>
@@ -58,23 +58,31 @@
               <section class="row">
 
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./assets/Tony Chiefs.jpg" width="350px" height="350px" alt="Chiefs" class="img-thumbnail">
+                  <a href="https://tonycrosby.net/02_CSS_Bootstrap">
+                    <img class="image1 img-fluid" src="./assets/website350x350.jpg" rel="Website">
+                  </a>
                 </div> 
 
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./assets/27067841_1627146370711870_2899505521628237938_n.jpg" width="350px" height="350px" alt="Profile Pic" class="img-thumbnail">
+                  <a href="https://tonycrosby.net/01_refactor_hw">
+                    <img class="image1 img-fluid" src="./assets/01hw.JPG" rel="Refactor HW" >
+                  </a>
                 </div>
 
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./assets/download.png" width="350" height="350" alt="Brothers" class="img-thumbnail">
+                  <a href="https://tonycrosby.net/03_password_generator">
+                    <img class="image1 img-fluid" src="./assets/password.JPG" rel="Password Generator">
+                  </a>
                 </div> 
     
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./assets/download (1).png" width="350" height="350" alt="HS Graduation" class="img-thumbnail">
+                  <a href="https://tonycrosby.net/03_password_generator">
+                  <img src="./assets/jsquiz.JPG"class="image1 img-fluid" rel="Javascript Quiz">
+                  </a>
                 </div>
 
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./assets/download (2).png" width="350" height="350" alt="Family" class="img-thumbnail">
+                  <img src="./assets/Tony Chiefs.jpg" alt="Big chiefs fan!" class="image1 img-fluid">
                 </div>
     
                 <hr ::before>
