--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./assets/Tony Chiefs.jpg" alt="Big chiefs fan!" class="image1 img-fluid">
+                  <img src="./assets/website2.JPG" alt="Website!" class="image1 img-fluid">
                 </div>
     
                 <hr ::before>
