--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       
               <hr ::before bg-dark>
 
-              <img class="img-fluid float-right" img src="./assets/7a142e0edbae14436b83d63447a33d41.png" alt="Chiefs" width="125px" height="150px"/>
+              <img class="img-fluid float-right" src="./assets/7a142e0edbae14436b83d63447a33d41.png" alt="Chiefs" width="125px" height="150px"/>
         
               <h1 class="text-warning">GO <strong class="text-danger">CHIEFS!</strong></h1>
               <p class="text-wrap"> I've been to many chiefs games and watch almost every game that I can! At home or try to be at the stadium!
