--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,21 @@
                 </div>
 
                 <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
-                  <img src="./assets/website2.JPG" alt="Website!" class="image1 img-fluid">
+                  <a target="_blank" href="https://tonycrosby.net/05_weekday_planner">
+                  <img src="./assets/Homework - Copy.JPG" alt="Homework 5!" class="image1 img-fluid">
+                  </a>
+                </div>
+
+                <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
+                  <a target="_blank" href="https://tonycrosby.net/06_weather_dashboard">
+                  <img src="./assets/screenshot-hw-6 - Copy.JPG" alt="Website!" class="image1 img-fluid">
+                  </a>
+                </div>
+
+                <div class="col-sm-3 col-md-3 col-lg-6 mt-4">
+                  <a target="_blank" href="https://millsy4.github.io/sportz_project/">
+                  <img src="./assets/sportzilla-demo.gif" alt="Website!" class="image1 img-fluid">
+                  </a>
                 </div>
     
                 <hr ::before>
@@ -126,8 +140,17 @@
                 </li>
 
                 <li>
-                  <a target="_blank" class="text-dark" href="https://tonycrosby.net/04_web_api/" rel="Link">Javascript Code Quiz</a>
+                  <a target="_blank" class="text-dark" href="https://tonycrosby.net/05_weekday_planner/" rel="Link">Weekday Planner</a>
                 </li>
+
+                <li>
+                  <a target="_blank" class="text-dark" href="https://tonycrosby.net/06_weather_dashboard/" rel="Link">Weather Dashboard</a>
+                </li>
+
+                <li>
+                  <a target="_blank" class="text-dark" href="https://millsy4.github.io/sportz_project/" rel="Link">Sportzilla Project 1</a>
+                </li>
+
                 <hr ::before>
               
           </div> 
