--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 
 <br>
 
-<main class="container-md">
+<main class="container-fluid">
 
   <div class="col-md-12">
 
@@ -53,7 +53,7 @@
 
       <div class="card-body bg-light">
 
-      <h3 class="text-dark text-center">Contact</h3>
+      <h3 class="text-dark text-center">Contact me here!</h3>
 
       <hr ::before>
     
